<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_change"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_bar_change_campus"  />
        <item
            android:id="@+id/nav_bookmark"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_bar_bookmarked_locations" />
        <item
            android:id="@+id/nav_suggest"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_bar_suggest_new_location" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_bar_notifications" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_bar_help" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_bar_about" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_bar_feedback" />
        </menu>
    </item>

</menu>
