<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView15"
        android:layout_width="175dp"
        android:layout_height="34dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="18dp"
        android:autoLink="phone"
        android:text="@string/contacts_sarc_num"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/TextView13"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/TextView13"
        android:layout_width="139dp"
        android:layout_height="35dp"
        android:layout_marginTop="12dp"
        android:text="@string/contacts_sarc"
        android:textAlignment="textEnd"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        tools:layout_editor_absoluteX="77dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="137dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:text="@string/contacts_mental"
        android:textAlignment="textEnd"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:layout_editor_absoluteX="77dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="175dp"
        android:layout_height="34dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="18dp"
        android:autoLink="phone"
        android:text="@string/contacts_mental_num"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="175dp"
        android:layout_height="33dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="18dp"
        android:autoLink="phone"
        android:text="@string/contacts_poison_number"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="175dp"
        android:layout_height="33dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="18dp"
        android:autoLink="phone"
        android:text="@string/contacts_security_nonemergency_num"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="175dp"
        android:layout_height="37dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="18dp"
        android:autoLink="phone"
        android:text="@string/contacts_security_emergency_num"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="175dp"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="18dp"
        android:autoLink="phone"
        android:text="@string/contacts_police_nonemergency_num"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textViewLifeThreateningNum" />

    <TextView
        android:id="@+id/textViewLifeThreateningNum"
        android:layout_width="175dp"
        android:layout_height="37dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:autoLink="phone"
        android:clickable="true"
        android:text="@string/contacts_life_threatening_num"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="133dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:text="@string/contacts_police_nonemergency"
        android:textAlignment="textEnd"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:layout_editor_absoluteX="76dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="295dp"
        android:layout_height="46dp"
        android:text="@string/title_activity_contacts"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textStyle="bold"
        android:translationY="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.060000002" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="133dp"
        android:layout_height="38dp"
        android:layout_marginTop="8dp"
        android:text="@string/contacts_life_threatening"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.017"
        tools:layout_editor_absoluteX="76dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="134dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:text="@string/contacts_poison"
        android:textAlignment="textEnd"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        tools:layout_editor_absoluteX="75dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="133dp"
        android:layout_height="39dp"
        android:layout_marginTop="12dp"
        android:text="@string/contacts_security_nonemergency"
        android:textAlignment="textEnd"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        tools:layout_editor_absoluteX="76dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="132dp"
        android:layout_height="36dp"
        android:layout_marginTop="12dp"
        android:text="@string/contacts_security_emergency"
        android:textAlignment="textEnd"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:layout_editor_absoluteX="77dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

</android.support.constraint.ConstraintLayout>