<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="accesscollective.uwastudentguild.com.accesscollective.WelcomePage"
    tools:showIn="@layout/activity_welcome_page">

    <Button
        android:id="@+id/getCurrentLocationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="@string/button_get_current_location"
        android:onClick="goToMapActivity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/selectCampusButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/button_select_campus"
        android:onClick="goToSelectCampusActivity"
        app:layout_constraintBottom_toTopOf="@+id/getCurrentLocationButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/welcomePageTitle"
        android:layout_width="292dp"
        android:layout_height="81dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="35sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/accessCollectiveIcon"
        android:layout_width="162dp"
        android:layout_height="159dp"
        app:layout_constraintBottom_toTopOf="@+id/selectCampusButton"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomePageTitle"
        app:layout_constraintVertical_bias="0.518"
        app:srcCompat="@drawable/ic_accessible_black_24dp" />
</android.support.constraint.ConstraintLayout>
